--- a/react-website/src/pages/indexStyle.scss
+++ b/react-website/src/pages/indexStyle.scss
@@ -2,7 +2,6 @@
     width: 100%;
     max-width: 1879px;
     margin: 0 auto;
-    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,17 +9,17 @@
 
 .inner-carousel{
     display: flex;
+    gap: 20px;
 }
 
 .item{
     min-height: 884px;
     min-width: 1879px;
-    padding: 14px;
 }
 
 .item img{
     width: 100%;
-    height: 90%;
+    height: 100%;
     border-radius: 12px;
     pointer-events: none;
 }
@@ -29,3 +28,14 @@
     cursor: grab;
     overflow: hidden;
 }
+
+
+
+body{
+
+    height: 100vh;
+    overflow: hidden;
+
+
+}
+
