--- a/react-website/src/pages/indexStyle.scss
+++ b/react-website/src/pages/indexStyle.scss
@@ -1,41 +1,38 @@
-.View{
-    width: 100%;
-    max-width: 1879px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.View {
+  width: 100%;
+  max-width: 1879px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.inner-carousel{
-    display: flex;
-    gap: 20px;
+.inner-carousel {
+  display: flex;
+  gap: 20px;
 }
 
-.item{
-    min-height: 884px;
-    min-width: 1879px;
+.item {
+  min-height: 100%;
+  min-width: 100%;
 }
 
-.item img{
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    pointer-events: none;
+.item img {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  pointer-events: none;
 }
 
-.carousel{
-    cursor: grab;
-    overflow: hidden;
+.carousel {
+  cursor: grab;
+  overflow: hidden;
 }
 
-
-
-body{
-
-    height: 100vh;
-    overflow: hidden;
-
-
+body,
+html {
+  height: 100vh;
+  overflow: initial !important;
 }
+
 
