--- a/react-website/src/pages/404.scss
+++ b/react-website/src/pages/404.scss
@@ -20,6 +20,7 @@ body {
   text-align: center;
   padding: 20px;
   border-radius: 10px;
+  backdrop-filter: blur(15px);
 }
 h1 {
   font-size: 50px;
