--- a/react-website/src/scss/contact.scss
+++ b/react-website/src/scss/contact.scss
@@ -7,6 +7,14 @@ body{
     overflow-x:hidden;
 }
 
+.TelaMain{
+    width: 100%;
+    max-width: 1879px;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
 .Tela1{
     display: flex;
     justify-content: space-evenly;
@@ -25,10 +33,11 @@ body{
     justify-content: center;
     color: white;
     border-radius: 20px;
+    user-select: none;
 }
 
 .Texto{
-
+    user-select: none;
     display: block;
     font-size: 20px;
     color: white;
@@ -73,7 +82,6 @@ body{
     align-items: center;
     justify-content: center;
     color: white;
-
     border-radius: 20px;
     gap: 30px;
 }
@@ -92,7 +100,11 @@ body{
 .Maps{
     height: 300px;
     width: 605px;
-    box-shadow: 2px 2px 20px black;
+    box-shadow: 2px 2px rgb(5, 5, 5);
+    border: 3px solid black;
+    border-radius: 0.4em;
+    background-color: gainsboro;
+
 }
 
 .MapsBox{
@@ -165,7 +177,7 @@ body{
     justify-items: center;
     align-items: center;
     gap: 10px;
-    background: #44fb1f;
+    background: #25D366;
     font-family: inherit;
     padding: 0.6em 1.3em;
     font-weight: 900;
@@ -194,7 +206,7 @@ body{
     justify-items: center;
     align-items: center;
     gap: 10px;
-    background: #e91ffb;
+    background: #C13584;
     font-family: inherit;
     padding: 0.6em 1.3em;
     font-weight: 900;
@@ -224,7 +236,7 @@ body{
     justify-items: center;
     align-items: center;
     gap: 10px;
-    background: #231ffb6b;
+    background: #4267B2;
     font-family: inherit;
     padding: 0.6em 1.3em;
     font-weight: 900;
@@ -253,14 +265,24 @@ body{
     font-size: 30px;
     color: white;
     text-shadow: 2px 2px 3px black;
+    user-select: none;
 }
 
 .Titulo2{
-
+    user-select: none;
     font-size: 30px;
     color: white;
     text-shadow: 2px 2px 3px black;
 }
+
+.foguete1{
+    position: absolute;
+    display: inline-block;
+    height: 80px;
+    -webkit-filter: drop-shadow(2px 2px 10px #222);
+    
+}
+
 
 
 .context {
@@ -278,8 +300,7 @@ body{
 
 
 .area{
-    position: absolute;
-    display: static;
+    position: fixed;
     z-index: -9999;
     width: 100%;
     height:100vH;
@@ -401,3 +422,4 @@ body{
     }
 
 }
+
