--- a/react-website/src/scss/services.scss
+++ b/react-website/src/scss/services.scss
@@ -2,10 +2,12 @@
 	margin-top: 70px;
 }
 
+
+
 .cards {
 	margin: auto;
 	max-width:250px;
-
+	overflow-y: none;
     width: auto;
     height: auto;
 	display: flex;
