--- a/react-website/src/scss/about.scss
+++ b/react-website/src/scss/about.scss
@@ -3,6 +3,15 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  @media screen and (max-width: 750px) {
+    height: 60vh;
+  }
+  @media screen and (max-width: 412px) {
+    display: flex;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .aboutItem {
@@ -13,30 +22,64 @@
   justify-content: center;
   margin-left: 50px;
   align-items: right;
+
+  @media screen and (max-width: 412px) {
+    display: flex;
+    height: 50vh;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .aboutItem h1 {
   color: black;
   font-weight: bold;
+  width: 345px;
+  @media screen and (max-width: 375px) {
+    width: 345px;
+    font-size: 2.5rem;
+  }
 }
 
 .aboutItem p {
   color: #fff;
   font-weight: bold;
+  @media screen and (max-width: 730px) {
+    width: 600px;
+  }
+  @media screen and (max-width: 580px) {
+    width: 370px;
+  }
+  @media screen and (max-width: 412px) {
+    width: 320px;
+  }
 }
 
 .img {
   padding: 30px;
   height: 50%;
   max-width: 50%;
+  @media screen and (max-width: 730px) {
+    display: none;
+  }
 }
 
 .about2 {
   background-color: black;
   height: 90vh;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-gap: 20px;
   justify-content: space-around;
   align-items: center;
+  @media screen and (max-width: 1080px) {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(300px, 1fr));
+    grid-gap: 20px;
+  }
+  @media screen and (max-width: 360px) {
+    height: 100vh;
+  }
 }
 
 .about2 .prop {
@@ -64,6 +107,13 @@
   width: 550px;
   font-size: 1rem;
   color: #fff;
+
+  @media screen and (max-width: 462px) {
+    width: 400px;
+  }
+  @media screen and (max-width: 412px) {
+    width: 350px;
+  }
 }
 
 .about3 {
@@ -87,4 +137,10 @@
   align-items: center;
   width: 700px;
   color: #fff;
+  @media screen and (max-width: 462px) {
+    width: 400px;
+  }
+  @media screen and (max-width: 412px) {
+    width: 350px;
+  }
 }
