--- a/react-website/src/App.scss
+++ b/react-website/src/App.scss
@@ -3,9 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+body, html {
   font-family: "Sora", sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-y: scroll;
+  background-image: linear-gradient(to top, #2e1753, #1f1746, #131537, #0d1028, #000000);
+  position: relative;
+  min-height: 100vh;
+}
+
+.LoadScene{
+  width: 100vw;
+height: 100vh;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
 }
