--- a/react-website/src/components/Footer/Footer.module.scss
+++ b/react-website/src/components/Footer/Footer.module.scss
@@ -1,21 +1,23 @@
 .footer {
-
-  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
   bottom: 0;
-  width: 100%;
+  height: 200px;
   background-color: black;
-  color: #fff;
-  padding: 1em;
-  text-align: center;
+  width: 100%;
+  z-index: 9999;
+
 }
 
 .social_list {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
 }
 
 .social_list li {
+  display: inline-block;
+  color: white;
   margin: 0 1em;
 }
 
@@ -29,7 +31,8 @@
 }
 
 .copyright {
-  margin-top: 1rem;
+  margin: 0;
+  padding: 0;
 }
 
 .copyright span {
