--- a/react-website/src/scss/404.scss
+++ b/react-website/src/scss/404.scss
@@ -1,7 +1,7 @@
-body {
+.Site2 {
   margin: 0;
   padding: 0;
-  font-family: "Tomorrow", sans-serif;
+  font-family: "Sora", sans-serif;
   height: 100vh;
   background-image: linear-gradient(
     to top,
