--- a/react-website/src/scss/contact.scss
+++ b/react-website/src/scss/contact.scss
@@ -1,21 +1,19 @@
-body{
+.TelaMain{
     margin:0;
     padding:0;
-    font-family: 'Tomorrow', sans-serif;
+    font-family: 'Sora', sans-serif;
     height:100vh;
     background-image: linear-gradient(to top, #2e1753, #1f1746, #131537, #0d1028, #000000);
     overflow-x:hidden;
-}
-
-.TelaMain{
     width: 100%;
     max-width: 1879px;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+
 }
 
-.Tela1{
+.Tela2{
     display: flex;
     justify-content: space-evenly;
 }
@@ -57,12 +55,13 @@ body{
 
 }
 
-.Area{
-    text-align: center;
-    display: block;
-    margin-bottom: 30px;
-    margin-top: 10px;
-    font-size: 30px;
+.area1{
+
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height:100vH;
+
 }
 
 // .inputs{
@@ -298,15 +297,6 @@ body{
     font-size: 50px;
 }
 
-
-.area{
-    position: fixed;
-    z-index: -9999;
-    width: 100%;
-    height:100vH;
-    
-   
-}
 
 .circles{
     position: absolute;
