--- a/react-website/src/scss/indexStyle.scss
+++ b/react-website/src/scss/indexStyle.scss
@@ -1,9 +1,7 @@
-.View {
-  max-width: 1879px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.Site10 {
+  overflow-y: visible;
+  max-width: 1860px;
+  margin: auto;
 }
 
 .inner-carousel {
@@ -28,9 +26,85 @@
   cursor: grab;
   overflow: hidden;
 }
-
-body,
-html {
-
-  overflow: initial !important;
+.precos{
+  backdrop-filter: blur(9900px);
+  padding-top: 10px;
 }
+
+.about11 {
+  display: flex;
+  background-color: #a80c0c;
+  align-items: center;
+  max-width: 1879px;
+  @media screen and (max-width: 750px) {
+    height: 100vh;
+  }
+  @media screen and (max-width: 412px) {
+    display: flex;
+    flex-wrap: wrap;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.aboutItem1 {
+  border-radius: 300px 700px 670px 330px / 300px 280px 720px 700px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  width: 50%;
+  height: 800px;
+  flex-direction: column;
+  justify-content: center;
+
+  align-items: right;
+
+  @media screen and (max-width: 412px) {
+    display: flex;
+    height: 50%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.ondas1{
+  max-width: 1879px;
+  position:absolute;
+  top: 1870px;
+}
+
+.aboutItem1 h1 {
+  color: black;
+  font-weight: bold;
+  text-align: center;
+
+  @media screen and (max-width: 375px) {
+    width: 345px;
+    font-size: 2.0rem;
+  }
+}
+
+.aboutItem1 p {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  @media screen and (max-width: 730px) {
+    width: 600px;
+  }
+  @media screen and (max-width: 580px) {
+    width: 370px;
+  }
+  @media screen and (max-width: 412px) {
+    width: 320px;
+  }
+}
+
+.about2{
+  text-align: center;
+}
+
+.about3{
+  text-align: center;
+}
+
+
