ok essa a ultima

--- a/react-website/src/scss/contact.scss
+++ b/react-website/src/scss/contact.scss
@@ -196,7 +196,7 @@
    .botaowpp:hover {
     transform: translate(-0.05em, -0.05em);
     box-shadow: 0.15em 0.15em black;
-    background-color: #fff;
+    background-color: rgb(58, 97, 46);
     transition: all 0.2s ease-in-out;
    }
    
@@ -225,7 +225,7 @@
    .botaoinst:hover {
     transform: translate(-0.05em, -0.05em);
     box-shadow: 0.15em 0.15em black;
-    background: #e967f5;
+    background: #733279;
     transition: all 0.2s ease-in-out;
 
    }
