--- a/react-website/src/scss/about.scss
+++ b/react-website/src/scss/about.scss
@@ -22,6 +22,7 @@
 }
 
 .aboutItem {
+  box-shadow: 2px 2px 100px black;
   border-radius: 300px 700px 670px 330px / 300px 280px 720px 700px;
   background-color: rgb(255, 255, 255);
   display: flex;
