--- a/react-website/src/scss/indexStyle.scss
+++ b/react-website/src/scss/indexStyle.scss
@@ -107,4 +107,188 @@
   text-align: center;
 }
 
+.TelaMain2{
+  margin:0;
+  padding:0;
+  font-family: 'Sora', sans-serif;
+  height:80vh;
+  background-image: linear-gradient(to top, #2e1753, #1f1746, #131537, #0d1028, #000000);
+  overflow-x:hidden;
+  width: 100%;
+  max-width: 1879px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.area2{
+  position: absolute;
+  width: 100%;
+  height:100vH;
+
+}
+
+.circles2{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles2 li{
+  
+  position: absolute;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+}
+
+.circles2 li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles2 li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 12s;
+}
+
+.circles2 li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 4s;
+}
+
+.circles2 li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 18s;
+}
+
+.circles2 li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles2 li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles2 li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles2 li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 45s;
+}
+
+.circles2 li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles2 li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
+}
+
+.aboutItem1 {
+  box-shadow: 2px 2px 100px black;
+  border-radius: 300px 700px 670px 330px / 300px 280px 720px 700px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  width: 50%;
+  height: 700px;
+  flex-direction: column;
+  justify-content: center;
+
+  align-items: right;
+
+  @media screen and (max-width: 412px) {
+    display: flex;
+    height: 800px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.aboutItem1 h1 {
+  color: black;
+  font-weight: bold;
+
+  @media screen and (max-width: 375px) {
+    width: 345px;
+    font-size: 2.5rem;
+  }
+}
+
+.aboutItem1 p {
+  display: flex;
+  align-self: center;
+
+  width: 800px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  @media screen and (max-width: 730px) {
+    width: 600px;
+  }
+  @media screen and (max-width: 580px) {
+    width: 370px;
+  }
+  @media screen and (max-width: 412px) {
+    width: 320px;
+  }
+}
+
 
