--- a/react-website/src/scss/indexStyle.scss
+++ b/react-website/src/scss/indexStyle.scss
@@ -291,4 +291,25 @@
   }
 }
 
+.whatsapp-link {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 1px 1px 2px #888;
+  z-index: 99999;
+}
+
+.fa-whatsapp {
+  margin-top: 15px;
+  margin-left: 15px;
+
+}
+
 
