--- a/react-website/src/scss/contact.scss
+++ b/react-website/src/scss/contact.scss
@@ -11,7 +11,12 @@
     align-items: center;
     justify-content: center;
 
+    @media screen and (max-width: 1365px) {
+        height: 750px;
+      }
+
 }
+
 
 .Tela2{
     display: flex;
